integ-tests/tests/snapshots/parser__bad_inline_tables__trailing_comma.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[wanted]: 
  ┌─ trailing_comma:1:10
  │
1 │ a = {a=1,}
  │          ^^ expected a table key


